--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ footer li {
 }
 .background-dark-blue {
     color: #fff;
-    background-color: #0079bf;
+    background-color: #AA3939;
 }
 .layout-fill-img {
     max-width: 100%;
