--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ footer li {
     display: inline-block;
     margin: 0 7px;
 }
-.background-dark-blue {
+.background-red {
     color: #fff;
     background-color: #AA3939;
 }
@@ -88,10 +88,6 @@ footer li {
 .img-float-left {
     float: left;
     margin-right: 40px;
-}
-.background-light-blue {
-    background-color: #e4f0f6;
-    overflow: hidden;
 }
 .layout-grid-frame {
     position: relative;
@@ -148,6 +144,14 @@ h2 {
 }
 .button {
     margin-bottom: 20px;
+}
+.navbar-default{
+  margin-bottom: 0;
+}
+h5 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.7rem;
 }
 Contact GitHub API Training Shop Blog About
 © 2017 GitHub, Inc. Terms Privacy Security Status Help
